fix: center logo on smaller screensizes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -684,3 +684,13 @@ code {
   border-width: 0;
   padding: 0;
 }
+
+@media screen and (max-width: 62.25rem) {
+  .navbar__items:first-of-type {
+    justify-content: space-between;
+  }
+
+  .navbar__items--right {
+    min-width: 40%;
+  }
+}
